--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,10 @@ li{
 	ul{
 		background-color: #333;
 		margin: 0;
-		padding: 20px;
+		padding-bottom: 20px;
+        padding-top: 30px;
+        padding-left: 30px;
+        
 
 		
 	}
