--- a/css/index.css
+++ b/css/index.css
@@ -9,9 +9,6 @@ li{
 		padding-bottom: 20px;
         padding-top: 30px;
         padding-left: 30px;
-        
-
-		
 	}
 
 	h1{
@@ -20,4 +17,7 @@ li{
 
     a{
         color:white;
+    }
+    nav{
+        margin: 0;
     }
