--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,7 @@ li{
 	ul{
 		background-color: #333;
 		margin: 0;
+        text-align: left;
 		padding-bottom: 20px;
         padding-top: 0px;
         padding-left: 20px;
