--- a/css/index.css
+++ b/css/index.css
@@ -20,12 +20,14 @@ li{
 
     a{
         color:white;
-        text-decoration-style: none;
+        text-decoration: none;
     }
+
     body{
         margin: 0;
         padding: 0;
     }
+
     html{
         margin: 0;
     }
