--- a/css/home.css
+++ b/css/home.css
@@ -2,9 +2,9 @@ body{
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    position: absolute;
 }
-
+html{
+    overflow-x: hidden;
 p{
     font-family: 'Ubuntu', sans-serif;
     color: #333;
