--- a/css/home.css
+++ b/css/home.css
@@ -347,7 +347,8 @@ br.space{
 }
 @media screen and (max-width:610px){
    img.bio{
-       width: auto;
+       width: 100%;
+       height: 100%;
 }
 /* Footer */
 footer{
