--- a/css/home.css
+++ b/css/home.css
@@ -349,6 +349,9 @@ br.space{
    img.bio{
        width: 100%;
        height: 100%;
+    }
+    li.logo{
+        padding-left: 20px;
 }
 /* Footer */
 footer{
