--- a/css/home.css
+++ b/css/home.css
@@ -62,6 +62,7 @@ figure{width:50%;}
 img.main{margin-left:-250px;}
 p.bio{padding-left:20px;padding-right:20px;}
 img.video{margin-top:-200px;}
+figure{width:100%;}
 }
 @media screen and (max-width:770px){div.text-box{left:100px;max-width:600px;}
 img.main{margin-left:-550px;}
