--- a/css/blog.css
+++ b/css/blog.css
@@ -15,34 +15,41 @@ body{
 	    	font-family: 'Ubuntu', sans-serif;
 			color: #333;
 			text-align: left;
+            padding-left: 80px;
+            max-width:1500px;
 	}
 
 	h1{
 			font-family: 'Ubuntu', sans-serif;
 			text-align: center;
 			color: #333;
+            padding-left: 80px;
 	}
 
 	h3, h4{
 			font-family: 'Ubuntu', sans-serif;
 			text-align: left;
 			color: dodgerblue;
+            padding-left: 80px;
 	}
 
 	h4{
 			color: gray;
 	}
 
-	ul.header{
-			text-align: right;
-			height: 75px;
-			line-height: 75px;
-			margin: 0px;
-	}
+    img.photo{
+        padding:20px;
+        width: 80%;
+        max-height: 800px;
+    }
 
 	li{
 			display: inline-block;
 	}
+
+    hr{
+        width: 90%;
+    }
 
 /* Navbar */
 	li.logo{
@@ -51,6 +58,13 @@ body{
 			padding-left:75px; 
 			padding-top:5px;
 	}
+    ul.header{
+		text-align: right;
+		height: 75px;
+		line-height: 75px;
+		margin: 0px;
+	}
+
 	a.header{
 			font-family: 'Ubuntu', sans-serif;
 			color: #333;
@@ -169,6 +183,10 @@ body{
         padding-right:0px;
     }
 
+    p{
+        padding-left: 5px;
+    }
+
 }
 @media screen and (max-width:720px){
 }
@@ -180,24 +198,25 @@ body{
     }
 }
 /* Footer */
-    footer{
-        width:100%;
-        background-color: #111;
-        text-align: center;
-        padding-bottom: 50px;
-    }
+footer{
+    width:100%;
+    background-color: #111;
+    text-align: center;
+    padding-bottom: 50px;
+}
 
-    p.footer{
-        padding-top: 50px;
-        color: white;
-        font-weight: bold;
-    }
+p.footer{
+    padding-top: 50px;
+    color: white;
+    font-weight: bold;
+    text-align: center;
+}
 
-    ul.footer{
-        display: inline;
-        list-style: none;
-        padding-right: 50px;
-    }
-    li.footer{
-        display: block;
-    }
+ul.footer{
+    display: inline;
+    list-style: none;
+    padding-right: 50px;
+}
+li.footer{
+    display: block;
+}
