--- a/css/home.css
+++ b/css/home.css
@@ -251,6 +251,11 @@ input, textarea{
 #contact_pc{
     padding-left: 200px;
 }
+iframe.sent{
+    border-style: none;
+     width:100%; 
+     height:50px;
+}
 
 @media screen and (max-width:1604px){
     img.video{
