--- a/css/home.css
+++ b/css/home.css
@@ -23,7 +23,7 @@ body{
 			color: #333;
 	}
 
-	h3, h4{
+	h2, h3, h4{
 			font-family: 'Ubuntu', sans-serif;
 			text-align: left;
 			color: dodgerblue;
@@ -33,6 +33,11 @@ body{
 			color: gray;
 	}
 
+    h2{
+        color: white;
+        text-align: center;
+        font-size: 20px;
+    }
 	ul.header{
 			text-align: right;
 			height: 75px;
@@ -172,6 +177,30 @@ figcaption.subtext{
     font-size: 18px;
     color: grey;
 }
+
+button.rates{
+    		border-color: white;
+			font-family: 'Ubuntu', sans-serif;
+			text-transform: uppercase;
+            vertical-align: center;
+			padding: 10px;
+            border: 2px solid gray;
+			border-radius: 10px;
+			background-color: dodgerblue;
+            margin: 0 auto;
+}
+table.rates{
+    width: 40%;
+    float: left;
+    margin-left: 100px;
+    border: 1px solid black;
+    border-radius: 5px;
+    margin-bottom: 50px;
+}
+br.rates{
+    display: none;
+}
+
 
 /* Bio */
 div.bio{
@@ -319,6 +348,15 @@ iframe.sent{
     img.video{
     margin-top: -300px;
     }
+    table.rates{
+        width: 80%;
+        float: none;
+        padding-left: 0;
+    }
+    br.rates{
+        display: block;
+    }
+
 }
 @media screen and (max-width:973px){
 
@@ -418,6 +456,9 @@ iframe.sent{
     }
     button.call{
         margin-left: 255px;
+    }
+    table.rates{
+        margin-left:50px;
     }
 }
 @media screen and (max-width:610px){
