--- a/css/blog.css
+++ b/css/blog.css
@@ -15,8 +15,8 @@ body{
 	    	font-family: 'Ubuntu', sans-serif;
 			color: #333;
 			text-align: left;
-            padding-left: 20px;
-            max-width:1500px;
+            padding-left: 60px;
+            width:90%;
 	}
 
 	h1{
