--- a/css/home.css
+++ b/css/home.css
@@ -64,6 +64,7 @@ body{
 
 	div.header{
 			position: fixed;
+			-webkit-backface-visibility: hidden;
 			width: 100%;
 			z-index: 2;
 			background-color: white;
