--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,10 @@
 /*Slide Show*/
     .mySlides {display:block; position: absolute;}
     .w3-left, .w3-right, .w3-badge {cursor:pointer}
-    .w3-badge {height:13px;width:13px;padding:0}
+    .w3-badge {height:15px;width:15px;padding:0!important}
     .parallax{
     height:100%;
+    position: relative;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
