--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,7 +4,7 @@
     .w3-badge {height:15px;width:15px;padding:0!important}
     .parallax{
     height:100%;
-    background-attachment: fixed;
+    background-attachment: scroll;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
