--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,6 +10,9 @@
     background-size: cover;
     z-index: -5;}
 
+#parallax2{height:110%}
+#parallax3{height:110%}
+
  @media screen and (max-width:770px){
     .parallax{background-attachment: scroll;}
 }
