--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,4 +1,4 @@
-html, body{width:100%; height: 100%; font-family: 'Ubuntu', sans-serif; color: whitesmoke;}
+html, body{width:100%; height: 100%; font-family: 'Ubuntu', sans-serif; color: whitesmoke; overflow-x: hidden;}
 a{text-decoration: underline;}
 .mySlides {display:block; position: absolute;}
 .w3-left, .w3-right, .w3-badge {cursor:pointer}
