Fixed Welcome text

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -56,6 +56,14 @@ a{text-decoration: underline;}
         color: white;
         }
 
+        #welcome{
+            text-align: center;
+            position: relative;
+            left:0;
+            width:100%; 
+            top:50%;
+        }
+
 /*Footer*/
     footer{
         width:100%;
@@ -157,7 +165,7 @@ a{text-decoration: underline;}
     /*Positioning fixes for mobile*/
     #moontext{
         font-size: 12px;
-        top:80px;
+        top:30px;
     }
 
      #welcome{
