--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,4 +1,5 @@
 html, body{width:100%; height: 100%; overflow-x: hidden; position: relative; font-family: 'Ubuntu', sans-serif; color: whitesmoke;}
+body{overflow-y: scroll}
 a{text-decoration: underline;}
 .mySlides {display:block; position: absolute;}
 .w3-left, .w3-right, .w3-badge {cursor:pointer}
