--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -166,9 +166,15 @@ a{text-decoration: underline;}
         top:30px;
     }
 
-     #quote{
-         white-space: pre-line;
-     }
+    #quote{
+        width:100% !important;
+        
+    }
+}
+@media screen and(max-width: 1090px){
+    #quote{
+        width:100% !important;
+    }
 }
 
 
