--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -62,6 +62,20 @@ a{text-decoration: underline;}
             width:100%; 
             top:50%;
         }
+	
+	#welcometext{
+	    opacity: 1;
+	    position: absolute;
+	    left: 0;
+	    right: 0;
+	    text-transform: uppercase;
+	    background-color: #282E34;
+	    width: 250px;
+	    text-align: center;
+	    font-size: 30px;
+	    letter-spacing: 10px;
+	    padding: 20px;
+	    margin: 0 auto;
 
 /*Footer*/
     footer{
