--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -76,6 +76,7 @@ a{text-decoration: underline;}
 	    letter-spacing: 10px;
 	    padding: 20px;
 	    margin: 0 auto;
+	}
 
 /*Footer*/
     footer{
