Removed !important from iframe height

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -119,7 +119,7 @@ a{text-decoration: underline;}
 iframe{
     background-color: #111 !important;
     width: inherit !important;
-    height: 2em !important;
+    height: 2em;
     margin: 0 !important;
 }
 
