--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -161,6 +161,11 @@ iframe{
         text-align: left;
     }
 
+    /*Change the slide show to fit the screen*/
+    .mySlides{
+        margin-left:-150px;
+    }
+
     /*Change footer to mobile friendly variant*/
     .footer{
         padding: 0;
